Fix To Top button spacing issue on short viewports

--- a/app/styles/app/layouts/log.scss
+++ b/app/styles/app/layouts/log.scss
@@ -111,7 +111,7 @@
     @supports(position: sticky) {
       position: sticky;
       float: right;
-      margin-top: -35px;
+      margin-top: 35px;
     }
   }
 }
